# fraction_generator

./: .gitignore  Cargo.toml
src/: main.rs
