[package]
name = "frac_gen"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.72"
futures = { version = "0.3.28", default-features = false }
indicatif = "0.17.6"
tokio = { version = "1.29.1", features = ["full"] }
